# kanade

./: README.md
agent/tools/MCP/docs/: INDEX.md  api-manual.html
agent/tools/MCP/mcp-1panel/: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
agent/tools/MCP/mcp-1panel/src/mcp_1panel/: __init__.py  __main__.py  mcp_server.py  panel_client.py  resources.py
agent/tools/MCP/mcp-1panel/src/mcp_1panel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
agent/tools/MCP/mcp-1panel/src/mcp_1panel/tools/: __init__.py  ai.py  apps.py  backups.py  containers.py  core.py  cronjobs.py  dashboard.py  databases.py  files.py  groups_logs.py  helpers.py  hosts.py  openresty_process.py  runtimes.py  settings.py  toolbox.py  websites.py
agent/tools/MCP/mcp-1panel/tests/: test_panel_client.py
agent/tools/MCP/npm/mcp-1panel/: .env.example  README.md  package-lock.json  package.json
agent/tools/MCP/npm/mcp-1panel/src/: api-proxy.js  index.js  panel-client.js  panel-client.test.js  resources.js  server.js
agent/tools/MCP/npm/mcp-1panel/src/tools/: ai.js  apps.js  backups.js  containers.js  core.js  cronjobs.js  dashboard.js  databases.js  files.js  groups-logs.js  helpers.js  hosts.js  index.js  openresty-process.js  runtimes.js  settings.js  toolbox.js  websites.js
agent/tools/skills/skill 模板/: README.md  SKILL（模板）.md
agent/tools/插件/conversation_logs/: README.md  main.py  metadata.yaml
agent/tools/插件/conversation_logs/pages/diary/: index.html
agent/tools/插件/conversation_logs/pages/files/: index.html
