[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-1panel"
version = "0.2.0"
description = "MCP Server for 1Panel - manage your 1Panel server through MCP protocol"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.28.0",
]

[project.scripts]
mcp-1panel = "mcp_1panel:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mcp_1panel" = ["py.typed"]
